{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 434,
  "lineage": "c0240235-6e80-c634-5ee9-35ac82b707d6",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a81a99f5ec58529",
            "arn": "arn:aws:ec2:us-east-1:891377247369:instance/i-03a264c994abf002c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03a264c994abf002c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b82080684c2d3c4c",
            "private_dns": "ip-10-0-2-80.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.80",
            "public_ip": "3.94.59.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-042762143dab038db",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-08adcf17efc6e297c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-017d2fd8d26ac7881",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08adcf17efc6e297c"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.apache_sg",
            "module.network.aws_security_group.nginx_sg",
            "module.network.aws_subnet.public_sub",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a81a99f5ec58529",
            "arn": "arn:aws:ec2:us-east-1:891377247369:instance/i-0cbe3b2a9b2e50d2e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cbe3b2a9b2e50d2e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02d56a66d7842a576",
            "private_dns": "ip-10-0-3-232.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.232",
            "public_ip": "54.226.123.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b1e09968c40b9628",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-08adcf17efc6e297c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae7f742940e2de7d",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08adcf17efc6e297c"
            ]
          },
          "dependencies": [
            "module.network.aws_security_group.apache_sg",
            "module.network.aws_security_group.nginx_sg",
            "module.network.aws_subnet.public_sub",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a81a99f5ec58529",
            "arn": "arn:aws:ec2:us-east-1:891377247369:instance/i-07e9529f33403e5d0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07e9529f33403e5d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e2743f1955b541e9",
            "private_dns": "ip-10-0-0-88.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-088ba76539ab990ec",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-01b334acd479cbc70"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b6d587ad401e5bd",
            "tags": {
              "Name": "nginx-server"
            },
            "tags_all": {
              "Name": "nginx-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b334acd479cbc70"
            ]
          },
          "dependencies": [
            "module.loadbalancer.aws_lb.private",
            "module.network.aws_security_group.apache_sg",
            "module.network.aws_security_group.nginx_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04a81a99f5ec58529",
            "arn": "arn:aws:ec2:us-east-1:891377247369:instance/i-0f2635ad2cab92b79",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f2635ad2cab92b79",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08aa3813e7cb07df3",
            "private_dns": "ip-10-0-1-40.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08f2b1c68ae271e07",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-01b334acd479cbc70"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f742b492fc81f59",
            "tags": {
              "Name": "nginx-server"
            },
            "tags_all": {
              "Name": "nginx-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01b334acd479cbc70"
            ]
          },
          "dependencies": [
            "module.loadbalancer.aws_lb.private",
            "module.network.aws_security_group.apache_sg",
            "module.network.aws_security_group.nginx_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377247369:loadbalancer/app/private-lb/52cbd10f3fc62fbd",
            "arn_suffix": "app/private-lb/52cbd10f3fc62fbd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "private-lb-1494844338.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377247369:loadbalancer/app/private-lb/52cbd10f3fc62fbd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "private-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08adcf17efc6e297c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03b6d587ad401e5bd"
              },
              {
                "subnet_id": "subnet-06f742b492fc81f59"
              }
            ],
            "subnets": [
              "subnet-03b6d587ad401e5bd",
              "subnet-06f742b492fc81f59"
            ],
            "vpc_id": "vpc-0ef4296d471fbcdb0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_security_group.apache_sg",
            "module.network.aws_security_group.nginx_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377247369:loadbalancer/app/public-lb/6dd6e188e715066c",
            "arn_suffix": "app/public-lb/6dd6e188e715066c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-lb-1016798295.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377247369:loadbalancer/app/public-lb/6dd6e188e715066c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08adcf17efc6e297c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-017d2fd8d26ac7881"
              },
              {
                "subnet_id": "subnet-0ae7f742940e2de7d"
              }
            ],
            "subnets": [
              "subnet-017d2fd8d26ac7881",
              "subnet-0ae7f742940e2de7d"
            ],
            "vpc_id": "vpc-0ef4296d471fbcdb0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_security_group.apache_sg",
            "module.network.aws_security_group.nginx_sg",
            "module.network.aws_subnet.public_sub",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377247369:listener/app/private-lb/52cbd10f3fc62fbd/f648d8468960e070",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377247369:targetgroup/apache-tg/08c5c47281588475",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377247369:listener/app/private-lb/52cbd10f3fc62fbd/f648d8468960e070",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891377247369:loadbalancer/app/private-lb/52cbd10f3fc62fbd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_lb.private",
            "module.loadbalancer.aws_lb_target_group.apache",
            "module.network.aws_security_group.apache_sg",
            "module.network.aws_security_group.nginx_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377247369:listener/app/public-lb/6dd6e188e715066c/7b20964df06d2aa9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377247369:targetgroup/nginx-tg/f8a403b114a83650",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377247369:listener/app/public-lb/6dd6e188e715066c/7b20964df06d2aa9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891377247369:loadbalancer/app/public-lb/6dd6e188e715066c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_lb.public",
            "module.loadbalancer.aws_lb_target_group.nginx",
            "module.network.aws_security_group.apache_sg",
            "module.network.aws_security_group.nginx_sg",
            "module.network.aws_subnet.public_sub",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377247369:targetgroup/apache-tg/08c5c47281588475",
            "arn_suffix": "targetgroup/apache-tg/08c5c47281588475",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377247369:targetgroup/apache-tg/08c5c47281588475",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "apache-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ef4296d471fbcdb0"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377247369:targetgroup/nginx-tg/f8a403b114a83650",
            "arn_suffix": "targetgroup/nginx-tg/f8a403b114a83650",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377247369:targetgroup/nginx-tg/f8a403b114a83650",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ef4296d471fbcdb0"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "a_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377247369:targetgroup/apache-tg/08c5c47281588475-20240723141952363800000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377247369:targetgroup/apache-tg/08c5c47281588475",
            "target_id": "i-03a264c994abf002c"
          },
          "dependencies": [
            "module.ec2.aws_instance.apache",
            "module.loadbalancer.aws_lb_target_group.apache",
            "module.network.aws_security_group.apache_sg",
            "module.network.aws_security_group.nginx_sg",
            "module.network.aws_subnet.public_sub",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377247369:targetgroup/apache-tg/08c5c47281588475-20240723141952028200000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377247369:targetgroup/apache-tg/08c5c47281588475",
            "target_id": "i-0cbe3b2a9b2e50d2e"
          },
          "dependencies": [
            "module.ec2.aws_instance.apache",
            "module.loadbalancer.aws_lb_target_group.apache",
            "module.network.aws_security_group.apache_sg",
            "module.network.aws_security_group.nginx_sg",
            "module.network.aws_subnet.public_sub",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "n_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377247369:targetgroup/nginx-tg/f8a403b114a83650-2024072314225367280000000d",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377247369:targetgroup/nginx-tg/f8a403b114a83650",
            "target_id": "i-07e9529f33403e5d0"
          },
          "dependencies": [
            "module.ec2.aws_instance.nginx",
            "module.loadbalancer.aws_lb.private",
            "module.loadbalancer.aws_lb_target_group.nginx",
            "module.network.aws_security_group.apache_sg",
            "module.network.aws_security_group.nginx_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377247369:targetgroup/nginx-tg/f8a403b114a83650-2024072314225335220000000c",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377247369:targetgroup/nginx-tg/f8a403b114a83650",
            "target_id": "i-0f2635ad2cab92b79"
          },
          "dependencies": [
            "module.ec2.aws_instance.nginx",
            "module.loadbalancer.aws_lb.private",
            "module.loadbalancer.aws_lb_target_group.nginx",
            "module.network.aws_security_group.apache_sg",
            "module.network.aws_security_group.nginx_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aea49c12d6f5f5c9",
            "arn": "arn:aws:ec2:us-east-1:891377247369:elastic-ip/eipalloc-0aea49c12d6f5f5c9",
            "domain": "vpc",
            "id": "eipalloc-0aea49c12d6f5f5c9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-216-26-70.compute-1.amazonaws.com",
            "public_ip": "3.216.26.70",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377247369:internet-gateway/igw-0620608aaa30cd8a9",
            "id": "igw-0620608aaa30cd8a9",
            "owner_id": "891377247369",
            "tags": {
              "Name": "int_gateway"
            },
            "tags_all": {
              "Name": "int_gateway"
            },
            "vpc_id": "vpc-0ef4296d471fbcdb0"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b05d925c5170f9f",
            "original_route_table_id": "rtb-0799e0743a4cff4fe",
            "route_table_id": "rtb-080fded4675e419aa",
            "vpc_id": "vpc-0ef4296d471fbcdb0"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aea49c12d6f5f5c9",
            "association_id": "eipassoc-0b624e9b98dbefcd8",
            "connectivity_type": "public",
            "id": "nat-0ae05685082e6d075",
            "network_interface_id": "eni-0a847e4f5ee8aa697",
            "private_ip": "10.0.2.179",
            "public_ip": "3.216.26.70",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-017d2fd8d26ac7881",
            "tags": {
              "Name": "main-nat-gateway"
            },
            "tags_all": {
              "Name": "main-nat-gateway"
            }
          },
          "dependencies": [
            "module.network.aws_eip.lb",
            "module.network.aws_subnet.public_sub",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377247369:route-table/rtb-085b1c2c00d0f7b9a",
            "id": "rtb-085b1c2c00d0f7b9a",
            "owner_id": "891377247369",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ae05685082e6d075",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef4296d471fbcdb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.lb",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_subnet.public_sub",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377247369:route-table/rtb-080fded4675e419aa",
            "id": "rtb-080fded4675e419aa",
            "owner_id": "891377247369",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0620608aaa30cd8a9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ef4296d471fbcdb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0577784a0a523dd5b",
            "route_table_id": "rtb-085b1c2c00d0f7b9a",
            "subnet_id": "subnet-03b6d587ad401e5bd"
          },
          "dependencies": [
            "module.network.aws_eip.lb",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public_sub",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d555afc58ea7ca5",
            "route_table_id": "rtb-085b1c2c00d0f7b9a",
            "subnet_id": "subnet-06f742b492fc81f59"
          },
          "dependencies": [
            "module.network.aws_eip.lb",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public_sub",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apache_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377247369:security-group/sg-08adcf17efc6e297c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08adcf17efc6e297c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01b334acd479cbc70"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240723141907088100000003",
            "name_prefix": "terraform-",
            "owner_id": "891377247369",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ef4296d471fbcdb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.nginx_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377247369:security-group/sg-01b334acd479cbc70",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b334acd479cbc70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240723141902617100000001",
            "name_prefix": "terraform-",
            "owner_id": "891377247369",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ef4296d471fbcdb0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377247369:subnet/subnet-03b6d587ad401e5bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b6d587ad401e5bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377247369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_1"
            },
            "tags_all": {
              "Name": "private_1"
            },
            "vpc_id": "vpc-0ef4296d471fbcdb0"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377247369:subnet/subnet-06f742b492fc81f59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f742b492fc81f59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377247369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_2"
            },
            "tags_all": {
              "Name": "private_2"
            },
            "vpc_id": "vpc-0ef4296d471fbcdb0"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377247369:subnet/subnet-017d2fd8d26ac7881",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017d2fd8d26ac7881",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377247369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_1"
            },
            "tags_all": {
              "Name": "public_1"
            },
            "vpc_id": "vpc-0ef4296d471fbcdb0"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377247369:subnet/subnet-0ae7f742940e2de7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae7f742940e2de7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377247369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_2"
            },
            "tags_all": {
              "Name": "public_2"
            },
            "vpc_id": "vpc-0ef4296d471fbcdb0"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377247369:vpc/vpc-0ef4296d471fbcdb0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06c8d391748985af8",
            "default_route_table_id": "rtb-0799e0743a4cff4fe",
            "default_security_group_id": "sg-051e8e9b753498b59",
            "dhcp_options_id": "dopt-08492498571b05720",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ef4296d471fbcdb0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0799e0743a4cff4fe",
            "owner_id": "891377247369",
            "tags": {
              "Name": "main_vpc"
            },
            "tags_all": {
              "Name": "main_vpc"
            }
          }
        }
      ]
    }
  ]
}